WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54153
AX: AX needs to stop using WebCoreViewFactory
https://bugs.webkit.org/show_bug.cgi?id=54153
Summary
AX: AX needs to stop using WebCoreViewFactory
chris fleizach
Reported
2011-02-09 16:50:13 PST
Since this doesn't exist in WK2, WebCore needs to stop using these instances and call the WK system interface methods more directly
Attachments
patch
(21.83 KB, patch)
2011-02-09 18:27 PST
,
chris fleizach
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-02-09 18:27:47 PST
Created
attachment 81909
[details]
patch
chris fleizach
Comment 2
2011-02-10 10:27:00 PST
http://trac.webkit.org/changeset/78241
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug