AX: AX needs to stop using WebCoreViewFactory https://bugs.webkit.org/show_bug.cgi?id=54153

Reviewed by Anders Carlsson.

../WebCore:

WebKit2 no longer uses WebCoreViewFactory, which means that accessibility code needs
to get off of it and use WebCoreSystemInterface, like other clients.

* WebCore.exp.in:
* accessibility/AXObjectCache.h:
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::handleFocusedUIElementChanged):
* accessibility/mac/AccessibilityObjectWrapper.h:
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper unregisterUniqueIdForUIElement]):
(CFAutoreleaseHelper):
(AXObjectIsTextMarker):
(AXObjectIsTextMarkerRange):
(AXTextMarkerRange):
(AXTextMarkerRangeStart):
(AXTextMarkerRangeEnd):
(textMarkerForVisiblePosition):
(-[AccessibilityObjectWrapper textMarkerForVisiblePosition:]):
(visiblePositionForTextMarker):
(-[AccessibilityObjectWrapper visiblePositionForTextMarker:]):
(visiblePositionForStartOfTextMarkerRange):
(visiblePositionForEndOfTextMarkerRange):
(textMarkerRangeFromMarkers):
(AXAttributeStringSetElement):
(-[AccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:]):
(textMarkerRangeFromVisiblePositions):
(-[AccessibilityObjectWrapper textMarkerRangeFromVisiblePositions:endPosition:]):
(-[AccessibilityObjectWrapper visiblePositionRangeForTextMarkerRange:]):
(-[AccessibilityObjectWrapper textMarkerRangeForSelection]):
(-[AccessibilityObjectWrapper accessibilitySetValue:forAttribute:]):
(-[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):
* editing/mac/SelectionControllerMac.mm:
(WebCore::accessibilityConvertScreenRect):
(WebCore::SelectionController::notifyAccessibilityForSelectionChange):
* platform/mac/WebCoreSystemInterface.h:
* platform/mac/WebCoreSystemInterface.mm:

../WebKit/mac:

* WebCoreSupport/WebSystemInterface.mm:
(InitWebCoreSystemInterface):

../WebKit2:

* WebProcess/WebCoreSupport/mac/WebSystemInterface.mm:
(InitWebCoreSystemInterface):



Canonical link: https://commits.webkit.org/68254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78241 268f45cc-cd09-0410-ab3c-d52691b4dbfc