Source/WebCore/accessibility/mac/AccessibilityObjectWrapper.h
@@ -29,14 +29,6 @@
 #ifndef AccessibilityObjectWrapper_h
 #define AccessibilityObjectWrapper_h
 
-#ifdef __OBJC__
-@class WebCoreTextMarker;
-@class WebCoreTextMarkerRange;
-#else
-class WebCoreTextMarker;
-class WebCoreTextMarkerRange;
-#endif
-
 namespace WebCore {
 class AccessibilityObject;
 class VisiblePosition;
